k8s/ddr/ddr-data-writer/ddr-data-writer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddr-data-writer-deployment
  labels:
    app: ddr-data-writer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ddr-data-writer
  template:
    metadata:
      labels:
        app: ddr-data-writer
    spec:
      containers:
        - name: ddr-data-writer
          image: yxchia98/ddr-data-writer:gke-1.2
          ports:
            - containerPort: 8080
