k8s/ddr/ddr-data-writer/ddr-data-writer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"  
  name: ddr-data-writer-ingress
  namespace: default
spec:
  rules:
  - host: datawriter.gke.yxchia.me
    http:
      paths:
      - backend:
          service:
            name: ddr-data-writer-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - datawriter.gke.yxchia.me
    secretName: ddr-data-writer-cert
